About Page complete

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>Documents</title>
+    <title>About</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -53,19 +53,19 @@
     <div class="main">
       <div class="mainbanner">
         <div class="bannertitle">
-          Start Shipping Today
+          service and simplification
         </div>
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          Documents
+          About
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
         <div class="maincontent">
           <div class="maintitle">
-            Online applications
+            About sims global solutions
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -77,53 +77,29 @@
 
           </div>
           <div class="maintext">
-            <p>Sims Global Solutions offers lines of credit to help you get your shipment on its way.
-              Contact a sales representative to submit the necessary forms to get approved and start shipping
-              today! Our most popular forms are available to download below. Email completed
-               forms to <a href="mailto:customerservice@simsglobalsolutions.com" class="blue">customerservice@simsglobalsolutions.com</a></p>
+            <p>Sims Global Solutions Founder Ted Sims knows logistics inside and out. He built his
+              career in shipping from the ground up, and understands its complicated nature. Since launching
+              in 2010, SGS has relied on two core competencies to provide outstanding logistics for its customers:
+              service and simplification.</p><br><p>With a vast and agile system of freight services supported by industry-leading technology,
+              customers rely on and return to Sims Global Solutions for dependable and cost-effective shipping
+              services.</p><br><p>We have built a team of logistics experts all with common goals and
+              mentalities. Our work is not done until the mission is accomplished.</p><br><p>We will
+              fulfill and exceed your expectations every time. That’s our promise.</p><br><p class="bold">Keys to Our Success:</p>
+              <div class="successlistarea">
+                <div class="successlist">
+                  Reliability <br> Dedication <br> Transparency <br> Adapt to Change <br>
+                   Leadership <br> Persistence <br> Compassion
+                </div>
+                <div class="successlist">
+                   Responsiveness <br>Our People <br> Commitment <br> Great Effort <br>
+                    Unity <br> Loyalty <br> Improve everyday
+                </div>
+              </div>
+              <h3>MOVING FORWARD TOGETHER</h3> <p>If there’s one thing we at SGS have learned from the logistics trade, it’s
+                that the best outcomes are a direct result of people working together. We believe in doing our part for our
+                community, and are proud to support the following organizations.</p>
+                <img src="https://app.salesdrip.com/users/myteam45785/Media25.jpg" alt="">
 
-               <div class="pdflist">
-                 <div class="pdfitem"><a href="https://app.salesdrip.com/users/myteam45785/Media188.pdf">
-                   <div class="pdficon">
-                     <img src="https://app.salesdrip.com/users/myteam45785/Media187.jpg" alt="">
-                   </div>
-                     <div class="pdftitle">
-                       Business and Credit Agreement
-                     </div>
-                 </a></div>
-                 <div class="pdfitem"><a href="https://app.salesdrip.com/users/myteam45785/Media189.pdf">
-                   <div class="pdficon">
-                     <img src="https://app.salesdrip.com/users/myteam45785/Media187.jpg" alt="">
-                   </div>
-                     <div class="pdftitle">
-                       Business Credit Card Form
-                     </div>
-                 </a></div>
-                 <div class="pdfitem"><a href="https://app.salesdrip.com/users/myteam45785/Media192.pdf">
-                   <div class="pdficon">
-                     <img src="https://app.salesdrip.com/users/myteam45785/Media187.jpg" alt="">
-                   </div>
-                     <div class="pdftitle">
-                       Business Terms and Conditions
-                     </div>
-                 </a></div>
-                 <div class="pdfitem"><a href="https://app.salesdrip.com/users/myteam45785/Media190.pdf">
-                   <div class="pdficon">
-                     <img src="https://app.salesdrip.com/users/myteam45785/Media187.jpg" alt="">
-                   </div>
-                     <div class="pdftitle">
-                       Canada Certificate of Origin
-                     </div>
-                 </a></div>
-                 <div class="pdfitem"><a href="https://app.salesdrip.com/users/myteam45785/Media191.pdf">
-                   <div class="pdficon">
-                     <img src="https://app.salesdrip.com/users/myteam45785/Media187.jpg" alt="">
-                   </div>
-                     <div class="pdftitle">
-                       United States Certificate of Origin
-                     </div>
-                 </a></div>
-               </div>
           </div>
         </div>
         <div class="mainimg">
