--- a/specialized.html
+++ b/specialized.html
@@ -314,7 +314,7 @@
        </div>
        <div class="contactbar">
          <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
-          <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+          <span class="doublepad">Email: <a href="mailto:customerservice@simsglobalsolutions.com" class="blue">customerservice@simsglobalsolutions.com</a></span>
 <span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
