--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>About</title>
+    <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -51,21 +51,31 @@
         </header>
     <!-- Body Section -------------------------------------------------------->
     <div class="main">
-      <div class="mainbannerabout">
+      <div class="mainbannercontact">
         <div class="bannertitle">
-          service and simplification
+          sims global solutions
         </div>
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          About
+          contact
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
         <div class="maincontent">
           <div class="maintitle">
-            About sims global solutions
+            Contact us
+          </div>
+
+          <div class="maintext">
+            <p>Sims Global Solutions<br>
+            6101 Long Prairie Rd.	, Ste. 744-252<br>
+            Flower Mound, TX 75028</p><br>
+
+            <p><a href="mailto:customerservice@simsglobalsolutions.com">Email:<span class="hidden">.</span><span class="blue">customerservice@simsglobalsolutions.com</span></a><br>
+            Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a><br>Fax: 214-594-9164</p>
+
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -74,31 +84,6 @@
             <a href="https://plus.google.com/up/?continue=https://plus.google.com/share?url%3Dhttps://shipsims.com/services/" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media185.jpg" alt=""></a>
             <a href="https://www.pinterest.com/simsglobalsolut/" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media186.jpg" alt=""></a>
             <a href="mailto:customerservice@simsglobalsolutions.com"><img src="https://app.salesdrip.com/users/myteam45785/Media182.jpg" alt=""></a>
-
-          </div>
-          <div class="maintext">
-            <p>Sims Global Solutions Founder Ted Sims knows logistics inside and out. He built his
-              career in shipping from the ground up, and understands its complicated nature. Since launching
-              in 2010, SGS has relied on two core competencies to provide outstanding logistics for its customers:
-              service and simplification.</p><br><p>With a vast and agile system of freight services supported by industry-leading technology,
-              customers rely on and return to Sims Global Solutions for dependable and cost-effective shipping
-              services.</p><br><p>We have built a team of logistics experts all with common goals and
-              mentalities. Our work is not done until the mission is accomplished.</p><br><p>We will
-              fulfill and exceed your expectations every time. That’s our promise.</p><br><p class="bold">Keys to Our Success:</p>
-              <div class="successlistarea">
-                <div class="successlist">
-                  Reliability <br> Dedication <br> Transparency <br> Adapt to Change <br>
-                   Leadership <br> Persistence <br> Compassion
-                </div>
-                <div class="successlist">
-                   Responsiveness <br>Our People <br> Commitment <br> Great Effort <br>
-                    Unity <br> Loyalty <br> Improve everyday
-                </div>
-              </div>
-              <h3>MOVING FORWARD TOGETHER</h3> <p>If there’s one thing we at SGS have learned from the logistics trade, it’s
-                that the best outcomes are a direct result of people working together. We believe in doing our part for our
-                community, and are proud to support the following organizations.</p>
-                <img src="https://app.salesdrip.com/users/myteam45785/Media25.jpg" alt="">
 
           </div>
         </div>
