--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>About</title>
+    <title>FAQS</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -51,21 +51,21 @@
         </header>
     <!-- Body Section -------------------------------------------------------->
     <div class="main">
-      <div class="mainbannerabout">
+      <div class="mainbannerfaq">
         <div class="bannertitle">
-          service and simplification
+          sims is ready to deliver
         </div>
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          About
+          faqs
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
         <div class="maincontent">
           <div class="maintitle">
-            About sims global solutions
+            what can sims do for me?
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -77,28 +77,23 @@
 
           </div>
           <div class="maintext">
-            <p>Sims Global Solutions Founder Ted Sims knows logistics inside and out. He built his
-              career in shipping from the ground up, and understands its complicated nature. Since launching
-              in 2010, SGS has relied on two core competencies to provide outstanding logistics for its customers:
-              service and simplification.</p><br><p>With a vast and agile system of freight services supported by industry-leading technology,
-              customers rely on and return to Sims Global Solutions for dependable and cost-effective shipping
-              services.</p><br><p>We have built a team of logistics experts all with common goals and
-              mentalities. Our work is not done until the mission is accomplished.</p><br><p>We will
-              fulfill and exceed your expectations every time. That’s our promise.</p><br><p class="bold">Keys to Our Success:</p>
-              <div class="successlistarea">
-                <div class="successlist">
-                  Reliability <br> Dedication <br> Transparency <br> Adapt to Change <br>
-                   Leadership <br> Persistence <br> Compassion
-                </div>
-                <div class="successlist">
-                   Responsiveness <br>Our People <br> Commitment <br> Great Effort <br>
-                    Unity <br> Loyalty <br> Improve everyday
-                </div>
-              </div>
-              <h3>MOVING FORWARD TOGETHER</h3> <p>If there’s one thing we at SGS have learned from the logistics trade, it’s
-                that the best outcomes are a direct result of people working together. We believe in doing our part for our
-                community, and are proud to support the following organizations.</p>
-                <img src="https://app.salesdrip.com/users/myteam45785/Media25.jpg" alt="">
+            <p><span class="bold">What’s the difference between Less-Than-Truckload (LTL) and truckload freight?</span><br>
+              Weight and size are the key factors between LTL and truckload shipments. For example, cargo that’s small
+               in size but very heavy may require truckload shipping.</p><br>
+               <p><span class="bold">Can I track my shipment from my phone?</span><br>Our site is mobile-friendly, but quoting and
+                 tracking software are best experienced through a desktop, laptop, or tablet. If you prefer regular updates, we are happy
+                 to set up email confirmations.</p><br>
+                  <p><span class="bold">Does Sims use their own fleet of trucks?</span><br>Instead of owning and operating our own fleet,
+                     we decided from the beginning to reduce our overhead–and your expenses–by building and leveraging our network of top
+                     carriers to meet your needs. Combining our service with their operations gives you a cost-effective shipping solution
+                      using the fastest and highest-quality transportation.</p><br>
+                     <p><span class="bold">How can I get a quote?</span><br>Receive a free, no-obligation quote for our Less-Than-Truckload
+                       (LTL) shipping services by filling out a short <span><a href="#" class="blue">quote form</a></span>. Simply answer a few questions and we’ll be in touch within
+                        minutes–not days.</p><br>
+                        <p><span class="bold">What can I do to make sure I’m getting an accurate quote from the beginning?</span><br>When
+                          it comes to time-sensitive transportation, no one likes surprises. The more information you can provide about your
+                          shipment, the more accurate your quote will be. Understanding your product and the types of shipping methods available
+                          will save you time and money, and help give you the edge you need to beat out your competitors.</p><br>
 
           </div>
         </div>
