--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="lowerhead">
           <nav class="main-nav">
             <ul>
-              <li id="navitem" class="servicenav"><a href="#">SERVICES</a>
+              <li id="navitem" class="servicenav"><a href="https://testindex.salesdrip.com/Truckload">SERVICES</a>
               <ul class="dropdown">
                 <li id="servitem"><a href="#">LTL</a></li>
                 <li id="servitem"><a href="#">Truckload</a></li>
@@ -51,46 +51,139 @@
         </header>
     <!-- Body Section -------------------------------------------------------->
     <div class="main">
-      <div class="mainbanner">
-        <div class="bannertitle">
-          Customized Shipping solutions
-        </div>
+      <div class="mainvid">
+         <video src="https://app.salesdrip.com/users/myteam45785/Media170.mp4" autoplay muted loop></video>
+         <div class="vidcontent">
+           <div class="vidtitle">
+             LOGISTICS YOU CAN SET <br>YOUR WATCH TO.<sup>™</sup>
+           </div>
+           <div class="vidpara">
+             Your time is as valuable as your cargo. Sims Global <br>Solutions guarantees unbeatable service for any <br>
+              shipping and transportation needs.
+           </div>
+           <div class="vidbttn">
+             <a href="#">Get a quote</a>
+           </div>
+           <div class="vidbttno">
+             <a href="#">Track a shipment</a>
+           </div>
+         </div>
       </div>
-      <div class="stripyellow">
-        <div class="yellowtitle">
-          Services
-        </div>
-      </div>
-      <div class="section1">
+
+      <div class="section1home">
       <div class="mainbody">
 
 
 
-        <div class="maincontent">
-          <div class="maintitle">
-            SERVICES AND TECHNOLOGY
+        <div class="maincontenthome">
+          <div class="maintitlehome">
+            <div class="line"></div>
+            THE ONLY ALL-IN-ONE FREIGHT SOLUTION YOU’LL WANT TO USE
+            <div class="line"></div>
           </div>
-          <div class="mainmedia">
-            <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
-            <a href="https://twitter.com/intent/tweet?text=Services%20https%3A%2F%2Fshipsims.com%2Fservices%2F&related=AddToAny,micropat" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media181.jpg" alt=""></a>
-            <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fshipsims.com%2Fservices%2F" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media183.jpg" alt=""></a>
-            <a href="https://plus.google.com/up/?continue=https://plus.google.com/share?url%3Dhttps://shipsims.com/services/" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media185.jpg" alt=""></a>
-            <a href="https://www.pinterest.com/simsglobalsolut/" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media186.jpg" alt=""></a>
-            <a href="mailto:customerservice@simsglobalsolutions.com" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media182.jpg" alt=""></a>
+
+          <div class="maintexthome">
+             At Sims Global Solutions, late is a four-letter word. We offer comprehensive, non-asset-based transportation and logistics services for Fortune 100 and small businesses alike across North America. From the moment you contact us for a quote to the time your shipment is delivered, we’ll always respond within minutes to work with your schedule and meet your deadline. With our extensive network of the industry’s top carriers and leading-edge Transportation Management Software, you get great rates on adaptive shipping solutions with regular, real-time updates on your shipment. Our customers are always in control, up-to-date, and at ease--and that’s why they keep coming back.
+          </div>
+          <div class="servicetypes">
+            <div class="servicon">
+              <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt=""><h3>Truckload</h3></a>
+              <p>From a single Truckload shipment to a multi-faceted logistics project, our dedicated logistics professional coordinate every load, every step of the way.</p>
+            </div>
+            <div class="servicon">
+              <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt=""><h3>LTL</h3></a>
+              <p>For small to medium sized shipments, Less-Than-Truckload (LTL) is your best bet. With a state of the art Transportation Management System (SimsTrak), we automate the process, making shipping easy and saves time.</p>
+            </div>
+            <div class="servicon">
+              <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media44.png" alt=""><h3>Expedited</h3></a>
+              <p>When deadlines are to be met and timing is critical, our expedited services provide the flexibility that you need to keep your customers happy.</p>
+            </div>
+            <div class="servicon">
+              <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt=""><h3>Intermodal</h3></a>
+              <p>If timing isn't a necessity or you are looking for a greener alternative whether that be price or environmental based, look no further than our Intermodal services.</p>
+            </div>
+            <div class="servicon">
+              <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media46.png" alt=""><h3>Specialized</h3></a>
+              <p>When we say specialized, we mean a special kind of shipment, with a special kind of solution.</p>
+            </div>
+            <div class="servicon">
+              <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media43.png" alt=""><h3>International</h3></a>
+              <p>We offer global freight services wherever you do business. Whether by air, land, or sea, worldwide door-to-door shipments begin with Sims.</p>
+            </div>
+          </div>
+          <div class="maintitlehome">
+            <div class="linelong"></div>
+            QUOTE, SCHEDULE AND TRACK WHEN YOU WANT
+            <div class="linelong"></div>
+          </div>
+          <div class="maintexthome">
+          Our cutting-edge Transportation Management System (TMS) technology and responsive website allows you to quote, schedule, and track all of your shipments from just about anywhere at anytime. Start a quote at your desk, schedule it from the warehouse on your tablet and get a delivery notification on your phone. Saving time and money is easy.
+          </div>
+          <div class="mainimghome">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media37.png" alt="">
 
           </div>
-          <div class="maintext">
-            <p>We help customers quickly identify available mode opportunities to convert Less-Than-Truckload (
-              LTL) freight to truckload or intermodal instead, which can be cost beneficial. This means less handling
-              of shipments, which causes faster transit times and mitigates the risk for freight claims. Streamlining
-              your transportation also means less fuel consumption, which is better for the environment.</p>
-          </div>
         </div>
-        <div class="mainimg">
-          <img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt="">
+
+
+      </div>
+      <div class="woodgrain">
+        <div class="woodtitle">
+          <div class="linelong"></div>
+          THE BEST CARRIERS DELIVER
+          <div class="linelong"></div>
+        </div>
+        <div class="woodcontent">
+          Enjoy the benefits of pre-negotiated pricing  programs with the top national, <br> regional, and local carriers in North America.
+        </div>
+        <div class="woodbanner">
+          <div class="slider">
+            <div class="slide">
+              <img src="" alt="">
+            </div>
+            <div class="slide">
+              <img src="" alt="">
+            </div>
+            <div class="slide">
+              <img src="" alt="">
+            </div>
+            <div class="slide">
+              <img src="" alt="">
+            </div>
+            <div class="slide">
+              <img src="" alt="">
+            </div>
+            <div class="slide">
+              <img src="" alt="">
+            </div>
+            <div class="slide">
+              <img src="" alt="">
+            </div>
+            <div class="slide">
+              <img src="" alt="">
+            </div>
+            <div class="slide">
+              <img src="" alt="">
+            </div>
+          </div>
         </div>
       </div>
 
+      </div>
+      <div class="sectiontwo">
+        <div class="TIA">
+          <div class="tiaimg">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media12.png" alt="">
+          </div>
+          <div class="tiatext">
+            <div class="tiatitle">
+              A BUSINESS BUILT AROUND AWARD-WINNING SERVICE.
+            </div>
+            <div class="tiasente">
+              We’re honored to be recognized by companies we admire for a job well done.
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- Footer Section ------------------------------------------------------>
