--- a/ltl.html
+++ b/ltl.html
@@ -58,14 +58,14 @@
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          <a href="#" class="blue">Services</a><span class="hidden">.</span>/ LTL
+          <a href="#" class="blue">Services</a><span class="hidden">.</span>/ Equipment Type
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
         <div class="maincontent">
           <div class="maintitle">
-            LESS-THAN-TRUCKLOAD (LTL)
+            Equipment Types
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -77,13 +77,24 @@
 
           </div>
           <div class="maintext">
-            <p>For small to medium sized shipments, Less-Than-Truckload (LTL) is your best bet.
-              LTL is perfect for 150 to 20,000 lb shipments. We have pre-determined rates with a
-              wide range of top-tier carriers and pass the savings onto you.</p><br><p>SimsTrak®, our state of the art TMS system,
-              automates the process and makes shipping easy. With SimsTrak®, you can stay on top of all of your business
-              through customizable reports to give you live insight on your company’s pulse.</p><br><p>We’re here to help you determine who
-              will be the best fit for your shipment for the following delivery types:
-                 </p>
+            <p>Don’t settle for second tier partnerships, work with an experienced broker who can procure any type of equipment,
+               anywhere at anytime. Whether you need Dry Van, Flatbed, Refrigerated, Step-Deck, Heavy Haul, RGN or Over-Dimensional freight moved, we can handle all of this for you!
+             </p><br><br>m
+             <div class="truckbox">
+               <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Dry Van
+             </div> <br>
+             <div class="truckbox">
+               <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Flat Bed
+             </div> <br>
+             <div class="truckbox">
+               <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Refrigerated
+             </div> <br>
+             <div class="truckbox">
+               <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Step-Deck
+             </div> <br>
+             <div class="truckbox">
+               <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Heavy Haul
+             </div>
           </div>
         </div>
         <div class="mainimg">
