--- a/services.html
+++ b/services.html
@@ -55,7 +55,11 @@
         <div class="bannertitle">
           Customized Shipping solutions
         </div>
-      </div>
+      </div><script type="text/javascript">showSection('');</script>
+
+						</div>
+						<div style="clear: both;"></div>
+					</div>
       <div class="stripyellow">
         <div class="yellowtitle">
           Services
@@ -94,22 +98,22 @@
       </div>
       <div class="servicetypes">
         <div class="servicon">
-          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt=""><p>Truckload</p></a>
+          <a href="https://shipsims.salesdrip.com/Truckload"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt=""><p>Truckload</p></a>
         </div>
         <div class="servicon">
-          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt=""><p>LTL</p></a>
+          <a href="https://shipsims.salesdrip.com/LTL"><img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt=""><p>LTL</p></a>
         </div>
         <div class="servicon">
-          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media44.png" alt=""><p>Expedited</p></a>
+          <a href="https://shipsims.salesdrip.com/Expedited"><img src="https://app.salesdrip.com/users/myteam45785/Media44.png" alt=""><p>Expedited</p></a>
         </div>
         <div class="servicon">
-          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt=""><p>Intermodal</p></a>
+          <a href="https://shipsims.salesdrip.com/Intermodal"><img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt=""><p>Intermodal</p></a>
         </div>
         <div class="servicon">
-          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media46.png" alt=""><p>Specialized</p></a>
+          <a href="https://shipsims.salesdrip.com/Specialized"><img src="https://app.salesdrip.com/users/myteam45785/Media46.png" alt=""><p>Specialized</p></a>
         </div>
         <div class="servicon">
-          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media43.png" alt=""><p>International</p></a>
+          <a href="https://shipsims.salesdrip.com/International"><img src="https://app.salesdrip.com/users/myteam45785/Media43.png" alt=""><p>International</p></a>
         </div>
       </div>
       </div>
